fixed uncheck subcategory bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="map"></div>
   <div id="menu">
     <form action="#">
-      <input type="checkbox" class="category" id="allRestaurants"/>All Restaurants&nbsp;&nbsp;
+      <input type="checkbox" class="category" id="allcuisines"/>All Restaurants&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="asianfusion"/> Asian Fusion&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="latin"/>Latin&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="southern"/>Southern&nbsp;&nbsp;
@@ -31,7 +31,7 @@
       <input type="checkbox" class="subcategory" id="greek"/>Greek&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="mediterranean"/>Mediterranean&nbsp;&nbsp;
       <hr>
-      <input type="checkbox" class="category" id="allOutdoorActivities"/>All Outdoor Activities&nbsp;&nbsp;
+      <input type="checkbox" class="category" id="allactivities"/>All Outdoor Activities&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="scuba"/>Scuba&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="rafting"/>Rafting&nbsp;&nbsp;
       <input type="checkbox" class="subcategory" id="surfing"/>Surfing&nbsp;&nbsp;
